Colab을 통해 생성됨

--- a/Colab_시작하기의_사본.ipynb
+++ b/Colab_시작하기의_사본.ipynb
@@ -371,7 +371,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df_actions"
+      ],
       "metadata": {
         "id": "Yz1N_XVMI2w9"
       },
@@ -380,7 +382,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "A = df_actions.copy()\n",
+        "A[\"type_name\"] = A.type_id.map(spadl.config.actiontypes_df().type_name.to_dict())\n",
+        "A[\"result_name\"] = A.result_id.map(spadl.config.results_df().result_name.to_dict())\n",
+        "A[\"bodypart_name\"] = A.bodypart_id.map(spadl.config.bodyparts_df().bodypart_name.to_dict())\n",
+        "\n",
+        "A.head()"
+      ],
       "metadata": {
         "id": "HEE9YmJ-I2uV"
       },
@@ -389,7 +398,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "A[\"type_name\"].value_counts()"
+      ],
       "metadata": {
         "id": "_P4oLr6_I2sM"
       },
@@ -398,7 +409,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 사전 학습된 xT 모델을 로드할 수도 있습니다.\n",
+        "url_grid = \"https://karun.in/blog/data/open_xt_12x8_v1.json\"\n",
+        "xTModel = xthreat.load_model(url_grid)"
+      ],
       "metadata": {
         "id": "X7YSxYHQI2pp"
       },
@@ -407,7 +422,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f\"xT shape: {xTModel.xT.shape}\")\n",
+        "xTModel.xT"
+      ],
       "metadata": {
         "id": "qavNCEccI2nF"
       },
@@ -416,7 +434,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 16x12 그리드로 xT 모델을 초기화하고 학습시킵니다\n",
+        "xTModel = xthreat.ExpectedThreat(l=16, w=12)\n",
+        "xTModel.fit(A)"
+      ],
       "metadata": {
         "id": "zwjz2HvWI2kr"
       },
@@ -425,7 +447,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f\"xT shape: {xTModel.xT.shape}\")\n",
+        "xTModel.xT"
+      ],
       "metadata": {
         "id": "RXRuFlwgI2iS"
       },
@@ -434,7 +459,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 학습된 xT 값을 히트맵으로 시각화.\n",
+        "mps.heatmap(xTModel.xT, cmap=\"hot\", linecolor=\"white\", cbar=\"True\")\n",
+        "\n",
+        "\n",
+        "# 그리드 셀 사이의 값을 부드럽게 보간(interpolate)하여 경기장 내 모든의 좌표 (x, y)에서의 xT 값을 추정.\n",
+        "# 경기장 전체 크기(105x68)에 맞춰 세밀한 좌표 그리드를 생성합니다. (105 x 68)\n",
+        "interp = xTModel.interpolator()\n",
+        "x = np.linspace(0, 105, 1050)\n",
+        "y = np.linspace(0, 68, 680)\n",
+        "mps.heatmap(interp(x,y), cmap=\"hot\", linecolor=\"white\", cbar=\"True\")"
+      ],
       "metadata": {
         "id": "vz_mwqOmI2fs"
       },
@@ -443,7 +479,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# xT 값은 공을 성공적으로 이동시키고 소유권을 유지한 액션에 대해서만 평가.\n",
+        "mov_actions = xthreat.get_successful_move_actions(A)\n",
+        "\n",
+        "# rate: xT_value = xT(end_location) - xT(start_location)\n",
+        "mov_actions[\"xT_value\"] = xTModel.rate(mov_actions)\n",
+        "mov_actions[[\"type_name\", \"start_x\", \"start_y\", \"end_x\", \"end_y\", \"xT_value\"]][:10]"
+      ],
       "metadata": {
         "id": "T8HKrkMTI2Xh"
       },
@@ -452,7 +495,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# xT 값 분포를 시각화하여 액션들의 가치 평가 경향을 확인합니다.\n",
+        "a = mov_actions.copy()\n",
+        "\n",
+        "# Show scatterplot of actions colored according to xT value\n",
+        "mps.field(show=False)\n",
+        "plt.title(\"Actions colored according to xT value\")\n",
+        "plt.scatter(a.start_x, a.start_y, c=a.xT_value, cmap=\"bwr_r\")\n",
+        "plt.colorbar()\n",
+        "plt.show()\n",
+        "\n",
+        "# xT 값이 낮은 액션\n",
+        "a = a.sort_values(\"xT_value\", ascending=True)\n",
+        "mps.field(show=False)\n",
+        "plt.scatter(a.start_x, a.start_y, c=a.xT_value, cmap=\"bwr_r\")\n",
+        "plt.colorbar()\n",
+        "plt.show()\n",
+        "\n",
+        "# xT 값이 높은 액션\n",
+        "a = a.sort_values(\"xT_value\", ascending=False)\n",
+        "mps.field(show=False)\n",
+        "plt.scatter(a.start_x, a.start_y, c=a.xT_value, cmap=\"bwr_r\")\n",
+        "plt.colorbar()\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "IBVkB71BI2VJ"
       },
