Colab을 통해 생성됨

--- a/intercept/intercept_model.ipynb
+++ b/intercept/intercept_model.ipynb
@@ -301,11 +301,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#intercept된 이벤트 데이터\n",
+        "df_actions[\"type_name\"] = df_actions.type_id.map(spadl.config.actiontypes_df().type_name.to_dict())\n",
+        "intercept_actions = df_actions[df_actions['type_name'] == 'interception']\n",
+        "print(f\"Number of interception actions: {len(intercept_actions)}\")\n",
+        "intercept_actions.head()"
+      ],
       "metadata": {
         "id": "pRNvkLzjlI1-"
       },
       "id": "pRNvkLzjlI1-",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Calculate the 2D histogram (density) of interception starting positions\n",
+        "# Using 12 bins for y-axis (field width) and 16 bins for x-axis (field length) to match xT grid dimensions\n",
+        "hist_density, x_edges, y_edges = np.histogram2d(\n",
+        "    intercept_actions.start_y,\n",
+        "    intercept_actions.start_x,\n",
+        "    bins=[12, 16],\n",
+        "    range=[[0, spadl.config.field_width], [0, spadl.config.field_length]]\n",
+        ")\n",
+        "\n",
+        "# Visualize the density heatmap\n",
+        "mps.heatmap(\n",
+        "    hist_density,\n",
+        "    cmap=\"hot\",\n",
+        "    linecolor=\"white\",\n",
+        "    cbar=True\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "nKDYKe1B2r6N"
+      },
+      "id": "nKDYKe1B2r6N",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OmShI_fN2r1p"
+      },
+      "id": "OmShI_fN2r1p",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IW7gmWI2x7G3"
+      },
+      "id": "IW7gmWI2x7G3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ab9ZI6i4x7C6"
+      },
+      "id": "ab9ZI6i4x7C6",
       "execution_count": null,
       "outputs": []
     },
